[project]
name = "ai-tutorial-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fpdf2>=2.8.7",
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.2",
]
